--- a/styles.css
+++ b/styles.css
@@ -172,13 +172,22 @@ button:hover {
     margin: 20px 0;
     width: 100%;
 }
-/* 캐릭터 박스 스타일 */
+
 .character-box {
     width: 100px;
     height: 100px;
     overflow: hidden;
     position: relative;
+    border: 1px solid #ccc;
+    margin: 10px;
 }
+
+.character-box img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
 
 .character-box:hover .character-details {
     display: block; /* 또는 visibility: visible; 또는 opacity: 1; */
